# strands-transformers

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  agent.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  strands.jsonl  test_deep.py  test_deep2.py  test_deep3.py
.github/workflows/: docs.yml  release.yml
docs/: index.md
docs/assets/: extra.css
docs/assets/js/: glass.js
docs/guide/: agent-brain.md  agentic-robot.md  audio.md  compat.md  content-blocks.md  contributing.md  installation.md  quickstart.md  robotics.md  the-tool.md
docs/reference/: architecture.md  examples.md  transformer-model.md  use-transformers.md
examples/: README.md  audio_content_block.py  cosmos_reason_embodied.py  document_and_audio.py  gap_tasks.py  local_model_agent.py  molmoact_vla.py  multimodal_advanced.py  multimodal_agent.py  multimodal_pipelines.py  omni_audio.py  openvla_vla.py  robot_reason_act_agent.py  smoke.py  smolvlm_image_text.py  vision_tasks.py
models/: transformers.py
strands_transformers/: __init__.py
strands_transformers/core/: __init__.py  compat.py  engine.py  io.py  registry.py
strands_transformers/models/: __init__.py  transformers.py
strands_transformers/session/: __init__.py  jsonl_session_manager.py
strands_transformers/templates/: llama3.2.j2  qwen3.j2
strands_transformers/tools/: __init__.py  dataset_generator.py  model_trainer.py  use_transformers.py
strands_transformers/types/: __init__.py  audio.py
templates/: gpt-oss.j2  llama3.1.j2  qwen3-0.6b.j2
tests/: test_extract_json.py
tools/: dataset_generator.py  model_trainer.py  use_transformers.py
