[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strands-transformers"
version = "0.1.0"
description = "Use local HuggingFace models with Strands + automatic training data collection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cagatay Cali", email = "cagataycali@icloud.com"}
]
keywords = [
    "strands",
    "transformers",
    "huggingface",
    "ai",
    "agents",
    "fine-tuning",
    "lora",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "transformers",
    "sentencepiece",
    "protobuf",
    "jinja2",
    "trl",
    "peft",
    "accelerate",
    "bitsandbytes",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "ruff",
]

training = [
    "datasets",
    "evaluate",
    "tensorboard",
]

all = [
    "strands-transformers[dev,training]",
]

[project.urls]
Homepage = "https://github.com/cagataycali/strands-transformers"
Repository = "https://github.com/cagataycali/strands-transformers"
Issues = "https://github.com/cagataycali/strands-transformers/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["strands_transformers*"]
exclude = ["tests*", "samples*", "sdk-python*"]

[tool.setuptools.package-data]
strands_transformers = ["templates/*.j2"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
